Worked on HomePage section of Fit Connect. Made changes to the following: 1. Added 3 new fragments accessed by the home fragment 2. In the nested home fragment, displayed a graph, listview and added the text to replicate the demo version 3. Added several xml files and a navigation xml file for the homepage 4. Changed main_activity.kt and themes.xml to no longer display the action bar. I have no idea how to change the action bar so that the home page has its own unique action bar with the drop down box to access the other nested fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,16 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="current_weekly_streak">Current Weekly Streak</string>
+    <string name="weekly_streak_description">Track your fitness today to get another streak</string>
+    <string name="your_activity">Your Activity</string>
+    <string name="fit_group_track">Fit Group Track</string>
+    <string name="recent">Recent</string>
+    <string name="pr_s_history">PR\'s History</string>
+    <string name="following">Following</string>
+    <string-array name="home_dropdown_options">
+        <item>HOME</item>
+        <item>FOLLOWING</item>
+        <item>PR HISTORY</item>
+    </string-array>
 </resources>
