--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="recent">Recent</string>
     <string name="pr_s_history">PR\'s History</string>
     <string name="following">Following</string>
+    <string name="testing_text_routine">Testing text routine</string>
+    <string name="testing_routine_part">Testing routine part</string>
+    <string name="testing_following">Testing Following</string>
+    <string name="testing_prhistory">Testing prhistory</string>
     <string-array name="home_dropdown_options">
         <item>HOME</item>
         <item>FOLLOWING</item>
