--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
         <item>PR HISTORY</item>
     </string-array>
     <string name="Profile">Profile</string>
+    <string name="Workout">Workout</string>
 </resources>
