Adding SET and ticking them and logging Workout Interface with selected exercise and Searching an exercise in exercise tab
Need work on database integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Fit_Connect</string>
+    <string name="set_number">%d</string>
+    <string name="weight_reps_format">%.1flbs × %d</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
