Integrated more parts of the database with parts of Home Fragments. Fixed the chart to properly update on changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="find_followers">Find Followers</string>
     <string name="unfollow">Unfollow</string>
     <string name="good_work_track_your_efforts_tomorrow_to_keep_the_streak">Good Work! Track Your Efforts Tomorrow to Keep the Streak!!</string>
+    <string name="last_workout">Latest Workout</string>
 </resources>
